# ATCG2Exercises

./: .gitignore  CMakeLists.txt
Part1Rendering/: HowToBuild.txt
Part1Rendering/assets/: model sources.txt
Part1Rendering/assets/scenes/: scene.txt  scenelist.txt
Part1Rendering/assets/shaders/INDLLWBTV2/: depth.vert
Part1Rendering/assets/shaders/depthpeeling/: blendshader.frag  combineshader.frag  peelshader.vert
Part1Rendering/assets/shaders/ggx/: envconv.frag  envconv.geom  ggx_opaque.frag  skybox.frag
Part1Rendering/assets/shaders/opaque/: opaque.vert
Part1Rendering/assets/shaders/particlesystem/: emit.comp  sim.comp
Part1Rendering/assets/shaders/textrendering/: textshader.vert
Part1Rendering/assets/shaders/ward/: envconv.vert  ward_opaque.frag
Part1Rendering/assets/shaders/wboit/: accumulationshader.vert  combineshader.frag  opaquelinear.vert
Part1Rendering/documentation/: Doxyfile
Part1Rendering/framework/: CommonTypes.h  libheaders.h
Part1Rendering/libs/glew-2.1.0/: glew.pc
Part1Rendering/libs/stb/: stb_image_write.c
Part1Rendering/src/: BSpline.h  Camera.cpp  DepthPeelRenderer.cpp  DepthPeelRenderer.h  IRenderer.h  Lights.cpp  Material.cpp  Material.h  Mesh.cpp  Model.cpp  OpaqueRenderer.cpp  OpaqueRenderer.h  ParticleEmitter.cpp  PerfDisplay.cpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h
Part2Geometry/: CMakeLists.txt
Part2Geometry/icpstuff/include/: lib_icp.h  lib_knn_query.h  lib_pca.h
Part2Geometry/icpstuff/src/: lib_icp.cpp  lib_knn_query.cpp  lib_pca.cpp  main.cpp
Part2Geometry/include/: Octree.h  curvefitter.h  icp.h  integral_invariant_signatures.h  mesh.h  mesh_saliency.h  meshfilters.h  meshsamplers.h  persistence1d.h  planefitter.h  symmetry.h  tooth_segmentation.h  voxelizer.h
Part2Geometry/libs/: CMakeLists.txt
Part2Geometry/libs/glad/: CMakeLists.txt
Part2Geometry/libs/glad/include/glad/: glad.h
Part2Geometry/libs/glad/src/: glad.c
Part2Geometry/libs/glew-2.1.0/: glew.pc
Part2Geometry/src/: Octree.cpp  icp.cpp  main.cpp  main_ms2.cpp  mesh.cpp  mesh_saliency.cpp  symmetry.cpp  tooth_segmentation.cpp
assets/scenes/: scene.txt  scene10.txt  scene2.txt  scene4.txt  scene6.txt  scene7.txt  scene8.txt  scene9.txt  scenefilesyntax.txt  scenelist.txt
assets/shaders/INDLLWBTV2/: accumulationshader.frag  accumulationshader.vert  blendshader.frag  combineshader.frag  depth.frag  opaquelinear.frag
assets/shaders/depthpeeling/: peelshader.frag
assets/shaders/ggx/: ggx_opaque.frag  ggx_opaque.vert
assets/shaders/perfdisplay/: perfdisplay.frag
assets/shaders/textrendering/: textshader.frag
assets/shaders/ward/: envconv.frag  skybox.vert  ward_opaque.frag  ward_opaque.vert
assets/shaders/wboit/: accumulationshader.frag  combineshader.vert
framework/: GameWindow.cpp  GameWindow.h  fw_config.h
libs/: CMakeLists.txt
libs/AxfReader/: AxfReader.hpp  AxfTest.cpp  CMakeLists.txt
src/: BSpline.cpp  Camera.cpp  Camera.h  Framebuffer.h  GGXRenderer.h  GgxRenderer.cpp  GgxRenderer.h  IRenderer.h  Lights.cpp  Lights.h  LinkedListWBTv2.cpp  LinkedListWBTv2.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleEmitter.h  PerfDisplay.cpp  PerfDisplay.h  Primitives.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Texture.cpp  Texture.h  Transform.h  WardRenderer.cpp  WardRenderer.h  WeightedBlendedOITRenderer.cpp  WeightedBlendedOITRenderer.h  Window.cpp  Window.h  main.cpp
